--- a/templates/index.html
+++ b/templates/index.html
@@ -11,36 +11,41 @@
 <body>
     <h1>PET Traceability Home</h1>
     
+    {% if session['username'] %}
+        <p>{{ session['username'] }} さん</p>
+    {% endif %}
+
     <!-- Add New PET フォーム -->
-    <h2>Add New PET</h2>
+    <h2>ペットボトルの投函数を入力してください</h2>
     <form action="{{ url_for('add_pet') }}" method="POST">
-        <label for="weight">Weight:</label>
+        <label for="weight">重量:</label>
         <input type="text" id="weight" name="weight" required><br><br>
-        <label for="location">Location:</label>
+        <label for="location">場所:</label>
         <input type="text" id="location" name="location" required><br><br>
-        <button type="submit">Add PET</button>
+        <button type="submit">投函</button>
     </form>
 
     <br><br>
-    <a href="{{ url_for('add_trace', trace_type='recycler') }}">Add Recycler Trace</a><br>
+    <!-- <a href="{{ url_for('add_trace', trace_type='recycler') }}">Add Recycler Trace</a><br>
     <a href="{{ url_for('add_trace', trace_type='spinning') }}">Add Spinning Trace</a><br>
-    <a href="{{ url_for('add_trace', trace_type='manufacturing') }}">Add Manufacturing Trace</a><br><br>
+    <a href="{{ url_for('add_trace', trace_type='manufacturing') }}">Add Manufacturing Trace</a><br><br> -->
     
     {% if message %}
         <p>{{ message }}</p>
     {% endif %}
     
-    <h2>Current PETs</h2>
+    <h2>リサイクル履歴</h2>
     <ul>
         {% for pet_id, pet in pets.items() %}
             <li>
                 <strong>PET ID:</strong> {{ pet_id }}<br>
-                <strong>Weight:</strong> {{ pet.weight }}<br>
-                <strong>Initial Location:</strong> {{ pet.initial_location }}<br>
-                <strong>Creation Date:</strong> {{ pet.creation_timestamp }}<br>
+                <strong>重量:</strong> {{ pet.weight }}<br>
+                <strong>投函場所:</strong> {{ pet.initial_location }}<br>
+                <strong>日付:</strong> {{ pet.creation_timestamp }}<br>
                 <a href="{{ url_for('trace_log', pet_id=pet_id) }}">View Trace Log</a>
             </li>
         {% endfor %}
     </ul>
+    <br><br><a href="{{ url_for('logout') }}">Logout</a>
 </body>
 </html>
