--- a/templates/add_trace_recycler.html
+++ b/templates/add_trace_recycler.html
@@ -12,7 +12,16 @@
     <h1>リサイクラー画面</h1>
 
     <form action="{{ url_for('add_trace', trace_type='recycler') }}" method="POST">
-        <label for="pet_id">PET ID:</label>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <ul class="flashes">
+                {% for message in messages %}
+                    <p>{{ message }}</p>
+                {% endfor %}
+                </ul>
+            {% endif %}
+        {% endwith %}
+        <label for="pet_id">日付_PET ID:</label>
         <select id="pet_id" name="pet_id" required>
             {% for pet_id in pet_ids %}
                 <option value="{{ pet_id }}">{{ pet_id }}</option>
